Fixed that 'Forklaring' box didn't align with image on Chrome and Safari

--- a/dev/scss/utils/_grid.scss
+++ b/dev/scss/utils/_grid.scss
@@ -32,6 +32,7 @@ $spans: 0 1 2 3 4 5 6 7 8 9 10 11 12;
 
   // Set num. columns with columns="X"
   .gridBlock-columns-#{$col} > * {
+    position: relative;
     width: percentage(1/$col) !important;
 
     @include breakpoint( 'tablet' ) {
